--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 23 20:29:31 CST 2021
-sdk.dir=/home/liang/Android/Sdk
+#Tue Sep 28 19:43:33 CST 2021
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
